app/javascript/flavours/polyam/styles/admin.scss
/* ... */
.speech-bubble {
  margin-bottom: 20px;
  border-inline-start: 4px solid $ui-highlight-color;

  &.positive {
    border-left-color: $success-green;
  }

  &.negative {
    border-left-color: lighten($error-red, 12%);
  }

  &.warning {
    border-left-color: $gold-star;
  }

  &__bubble {
    padding: 16px;
    padding-inline-start: 14px;
    font-size: 15px;
    line-height: 20px;
    border-radius: 4px 4px 4px 0;
    position: relative;
    font-weight: 500;

    a {
      color: $darker-text-color;
    }
  }

  &__owner {
    padding: 8px;
    padding-inline-start: 12px;
  }

  time {
    color: $dark-text-color;
  }
}

.report-card {
  background: $ui-base-color;
  border-radius: 4px;
  margin-bottom: 20px;

  &__profile {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px;

    .account {
      padding: 0;
      border: 0;

      &__avatar-wrapper {
        margin-inline-start: 0;
      }
    }

    &__stats {
      flex: 0 0 auto;
      font-weight: 500;
      color: $darker-text-color;
      text-transform: uppercase;
      text-align: end;

      a {
        color: inherit;
        text-decoration: none;

        &:focus,
        &:hover,
        &:active {
          color: lighten($darker-text-color, 8%);
        }
      }

      .red {
        color: $error-value-color;
      }
    }
  }

  &__summary {
    &__item {
      display: flex;
      justify-content: flex-start;
      border-top: 1px solid darken($ui-base-color, 4%);

      &:hover {
        background: lighten($ui-base-color, 2%);
      }

      &__reported-by,
      &__assigned {
        padding: 15px;
        flex: 0 0 auto;
        box-sizing: border-box;
        width: 150px;
        color: $darker-text-color;

        &,
        .username {
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }

      &__content {
        flex: 1 1 auto;
        max-width: calc(100% - 300px);

        &__icon {
          color: $dark-text-color;
          margin-inline-end: 4px;
          font-weight: 500;
        }
      }

      &__content a {
        display: block;
        box-sizing: border-box;
        width: 100%;
        padding: 15px;
        text-decoration: none;
        color: $darker-text-color;
      }
    }
  }
}

.one-line {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ellipsized-ip {
  display: inline-block;
  max-width: 120px;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
}

.admin-account-bio {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -5px;
  margin-top: 20px;

  > div {
    box-sizing: border-box;
    padding: 0 5px;
    margin-bottom: 10px;
    flex: 1 0 50%;
    max-width: 100%;
  }

  .account__header__fields,
  .account__header__content {
    background: lighten($ui-base-color, 8%);
    border-radius: 4px;
    height: 100%;
  }

  .account__header__fields {
    margin: 0;
    border: 0;

    a {
      color: $highlight-text-color;
    }

    dl:first-child .verified {
      border-radius: 0 4px 0 0;
    }

    .verified a {
      color: $valid-value-color;
    }
  }

  .account__header__content {
    box-sizing: border-box;
    padding: 20px;
    color: $primary-text-color;
  }
}

.center-text {
  text-align: center;
}

.applications-list__item,
.filters-list__item {
  padding: 15px 0;
  background: $ui-base-color;
  border: 1px solid lighten($ui-base-color, 4%);
  border-radius: 4px;
  margin-top: 15px;
}

.user-role {
  color: var(--user-role-accent);

  &__preview {
    display: flex;
    justify-content: flex-end;
    flex-direction: column;
    background: var(--background-color);

    .item {
      padding: 12px 15px;
      border: none;
    }

    .dark {
      background-color: darken($classic-base-color, 8%);

      .account-role {
        color: $classic-secondary-color;
        background-color: var(
          --user-role-background,
          rgba($classic-secondary-color, 0.1)
        );
        border-color: var(
          --user-role-border,
          rgba($classic-secondary-color, 0.5)
        );
      }
    }

    .light {
      background-color: $white;

      .account-role {
        color: $classic-base-color;
        background-color: var(
          --user-role-background,
          rgba($classic-base-color, 0.1)
        );
        border-color: var(--user-role-border, rgba($classic-base-color, 0.5));
      }
    }
  }
}

.announcements-list,
.filters-list {
  border: 1px solid lighten($ui-base-color, 4%);
  border-radius: 4px;

  &__item {
    padding: 15px 0;
    background: $ui-base-color;
    border-bottom: 1px solid lighten($ui-base-color, 4%);

    &__title {
      padding: 0 15px;
      display: block;
      font-weight: 500;
      font-size: 18px;
      line-height: 1.5;
      color: $secondary-text-color;
      text-decoration: none;
      margin-bottom: 10px;

      .account-role {
        vertical-align: middle;
      }
    }

    a.announcements-list__item__title {
      &:hover,
      &:focus,
      &:active {
        color: $primary-text-color;
      }
    }

    &__meta {
      padding: 0 15px;
      color: $dark-text-color;

      a {
        color: inherit;
        text-decoration: underline;

        &:hover,
        &:focus,
        &:active {
          text-decoration: none;
        }
      }
    }

    &__action-bar {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    &__permissions {
      margin-top: 10px;
    }

    &:last-child {
      border-bottom: 0;
    }
  }
}
/* ... */

